--- a/style.css
+++ b/style.css
@@ -187,7 +187,10 @@ a:hover {
 }
 
 /* Main, Article e Aside */
-.wrap>main {}
+.wrap>main {
+    display: flex;
+    flex-direction: column;
+}
 
 .wrap>main>article {
     border-bottom: 5px dotted purple;
@@ -217,7 +220,7 @@ a:hover {
     /* Main, Article e Aside */
 
     .wrap>main {
-        display: flex;
+        flex-direction: row;
     }
 
     .wrap>main>article {
@@ -250,24 +253,30 @@ a:hover {
 
 }
 
-/* Estiliza index */
+/* Estiliza conteúdo da index */
+
 .art_block {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     cursor: pointer;
     margin-bottom: 1rem;
-    background-color: rgba(0,0,0,.1);
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.art_block:hover {
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .art_block img {
     display: block;
-    width: 80px;
-    height: 80px;
-    margin-right: 1rem;
+}
+
+.art_block div {
+    padding: .5rem;
 }
 
 .art_block h4 {
-    margin: 0;
+    margin-top: 0;
     margin-bottom: .5rem;
 }
 
@@ -275,6 +284,15 @@ a:hover {
     font-size: 90%;
 }
 
-.art_block div {
-    padding: .5rem;
+@media (min-width: 475px) {
+
+    .art_block {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .art_block img {
+        width: 90px;
+        height: 90px;
+    }
 }
